force-app/main/default/objects/CM_QBR_Setup__c/CM_QBR_Setup__c.object-meta.xml
<CustomObject>
    <description>QBR meeting topic setup used by the CM Demo Assets QBR flow.</description>
    <label>QBR Setup</label>
    <nameField>
        <displayFormat>QBRS-{0000}</displayFormat>
        <label>QBR Setup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBR Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>