force-app/main/default/objects/CM_QBR_Setup__c/fields/Chinese_Topics__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Topics__c</fullName>
    <description>Chinese QBR agenda topics. One line per topic.</description>
    <label>Chinese Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>