force-app/main/default/objects/CM_QBR_Setup__c/fields/English_Topics__c.field-meta.xml
<CustomField>
    <fullName>English_Topics__c</fullName>
    <description>English QBR agenda topics. One line per topic.</description>
    <label>English Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>