force-app/main/default/objects/CM_QBR_Setup__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks the active QBR setup record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>